--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: Git Command Line Cheat Sheet
+title: Git Command Line Materials
 # remote_theme: "mmistakes/minimal-mistakes"
