--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-leap-day
 title: Git Command Line Materials
 # remote_theme: "mmistakes/minimal-mistakes"
